--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-    <h1>Welcome to my webapp spring 2021 github page test!</h1>
+    <h1>Welcome to my webapp spring 2021 github page test! This page is a work in progress</h1>
 </body>
 </html>
