--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+    <title>
+        New HTML
+    </title>
 </head>
 <body>
     <h1>Welcome to my webapp spring 2021 github page test! This page is a work in progress</h1>
